k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: datahub
  labels:
    app.kubernetes.io/part-of: kwater-datahub
